[package]
name = "similar-sort"
version = "2.0.0"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bump_alloc = "0.1.0"
color-eyre = "0.5.7"
rayon = "1.5.1"
strsim = "0.10.0"
structopt = "0.3.22"
